--- a/web/dartling/tasks/dartling_tasks_web.html
+++ b/web/dartling/tasks/dartling_tasks_web.html
@@ -44,8 +44,8 @@
         </a>
       </p>
       <p>
-        <img src="https://dl.dropbox.com/u/161496/dart/img/dartling_demo.png"/>
-        The model example, to be replaced by your model, is designed with
+        <img src="img/model.png"/>
+        The model is designed with
         <a  href="https://github.com/dzenanr/model_concepts" class="link">
           Model Concepts.
         </a>
